--- a/contact.html
+++ b/contact.html
@@ -8,91 +8,235 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Segoe UI', Arial, sans-serif; /* Prefer Segoe UI for a modern look */
             min-height: 100vh;
             display: flex;
             flex-direction: column;
+            background-color: #f0f2f5; /* Light grey background for the entire page */
         }
         .navbar {
-            background-color: #f8f9fa; /* Light background for navbar */
-            box-shadow: 0 2px 4px rgba(0,0,0,0.05);
+            background-color: #ffffff; /* White background for navbar */
+            box-shadow: 0 2px 8px rgba(0,0,0,0.1); /* More pronounced shadow */
+            padding-top: 1rem;
+            padding-bottom: 1rem;
+        }
+        .navbar-brand {
+            display: flex;
+            align-items: center;
         }
         .navbar-brand .logo-img {
-            width: 30px; /* Adjust size as needed */
-            height: 30px;
-            margin-right: 8px;
+            width: 35px; /* Slightly larger logo */
+            height: 35px;
+            margin-right: 10px;
         }
         .navbar-brand .brand-text {
-            font-weight: bold;
-            font-size: 1.25rem;
-            color: #000;
+            font-weight: 700; /* Bolder text */
+            font-size: 1.4rem; /* Larger font size */
+            color: #333; /* Darker text for better contrast */
+            line-height: 1.2; /* Adjust line height for multi-line brand name */
         }
+        .nav-link {
+            font-weight: 500;
+            color: #555;
+            transition: color 0.3s ease;
+        }
+        .nav-link:hover {
+            color: #007bff; /* Primary color on hover */
+        }
+        .nav-link.active {
+            color: #007bff;
+            font-weight: 600;
+        }
+        .btn-outline-primary {
+            border-color: #007bff;
+            color: #007bff;
+            transition: all 0.3s ease;
+        }
+        .btn-outline-primary:hover {
+            background-color: #007bff;
+            color: #fff;
+        }
+        .btn-primary {
+            background-color: #007bff;
+            border-color: #007bff;
+            transition: all 0.3s ease;
+        }
+        .btn-primary:hover {
+            background-color: #0056b3;
+            border-color: #0056b3;
+        }
+
         .content-section {
-            flex-grow: 1; /* Allows content to take up available space */
-            padding: 4rem 0; /* Vertical padding */
+            flex-grow: 1;
+            padding: 6rem 0 4rem; /* Increased top padding to account for fixed navbar */
             background-color: #f8f9fa; /* Light background for content */
         }
         .card {
-            border-radius: 12px;
-            box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+            border: none; /* Remove default bootstrap card border */
+            border-radius: 15px; /* More rounded corners */
+            box-shadow: 0 8px 20px rgba(0,0,0,0.1); /* Softer, larger shadow */
+            overflow: hidden; /* Ensures content stays within rounded corners */
         }
         .section-title {
-            font-weight: bold;
+            font-weight: 700;
             color: #333;
-            margin-bottom: 2rem;
+            margin-bottom: 3rem; /* More space below title */
+            font-size: 3.5rem; /* Larger for display-1 effect */
+        }
+        .lead {
+            font-size: 1.15rem;
+            color: #555;
         }
         .contact-info-item {
-            margin-bottom: 1rem;
-            text-align: left;
+            display: flex; /* Use flex for icon and text alignment */
+            align-items: center;
+            margin-bottom: 1.2rem; /* More space between items */
+            color: #444;
+            font-size: 1.05rem;
         }
         .contact-info-item i {
-            font-size: 1.2rem;
+            font-size: 1.4rem; /* Larger icons */
             color: #007bff;
-            margin-right: 0.5rem;
+            margin-right: 0.8rem; /* More space between icon and text */
+            width: 25px; /* Fixed width for icon to ensure consistent alignment */
+            text-align: center;
         }
-        .map-placeholder {
-            background-color: #e9ecef;
-            height: 300px;
+        .contact-info-item a {
+            color: #007bff;
+            text-decoration: none;
+            transition: color 0.3s ease;
+        }
+        .contact-info-item a:hover {
+            color: #0056b3;
+            text-decoration: underline;
+        }
+        .form-control {
+            border-radius: 8px; /* Rounded form fields */
+            padding: 0.75rem 1rem;
+            border: 1px solid #ddd;
+        }
+        .form-control:focus {
+            border-color: #007bff;
+            box-shadow: 0 0 0 0.25rem rgba(0, 123, 255, 0.25);
+        }
+        .btn.w-100 {
+            padding: 0.8rem 1rem;
+            font-size: 1.1rem;
             border-radius: 8px;
+        }
+        .map-container {
+            border-radius: 15px;
+            overflow: hidden; /* Ensures iframe corners are rounded */
+            box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+            background-color: #e9ecef; /* Fallback background for map */
+            min-height: 350px; /* Increased height for better visibility */
             display: flex;
             justify-content: center;
             align-items: center;
-            color: #6c757d;
-            font-weight: bold;
-            text-align: center;
         }
-        footer {
-            background-color: #343a40; /* Dark background for footer */
+        .map-container iframe {
+            width: 100%;
+            height: 350px; /* Match container height */
+            border: 0;
+            display: block; /* Remove extra space below iframe */
+        }
+        .footer {
+            background-color: #343a40;
             color: #f8f9fa;
-            padding: 2rem 0;
+            padding: 2.5rem 0; /* More vertical padding */
             text-align: center;
+            margin-top: auto;
         }
-        footer a {
-            color: #007bff;
+        .footer p {
+            margin-bottom: 0.5rem;
+            font-size: 0.95rem;
+        }
+        .footer a {
+            color: #8bb4e0; /* Lighter blue for footer links */
             text-decoration: none;
+            transition: color 0.3s ease;
         }
-        footer a:hover {
+        .footer a:hover {
+            color: #fff;
             text-decoration: underline;
         }
+
         /* Responsive adjustments */
+        @media (max-width: 992px) {
+            .navbar-brand .brand-text {
+                font-size: 1.2rem;
+            }
+            .section-title {
+                font-size: 3rem;
+            }
+            .map-container, .map-container iframe {
+                min-height: 300px;
+                height: 300px;
+            }
+        }
+
         @media (max-width: 768px) {
             .content-section {
-                padding: 2rem 0;
+                padding: 5rem 0 3rem; /* Adjust padding for fixed navbar */
             }
-            .navbar-brand .brand-text {
+            .section-title {
+                font-size: 2.5rem;
+                margin-bottom: 2rem;
+            }
+            .lead {
                 font-size: 1rem;
             }
-            .map-placeholder {
-                height: 200px; /* Smaller map on small screens */
+            .card {
+                padding: 1.5rem !important; /* Adjust card padding */
+            }
+            .contact-info-item {
+                margin-bottom: 1rem;
+                font-size: 0.95rem;
+            }
+            .contact-info-item i {
+                font-size: 1.2rem;
+            }
+            .map-container, .map-container iframe {
+                min-height: 250px;
+                height: 250px;
+            }
+            .navbar-collapse {
+                text-align: center; /* Center navbar items when collapsed */
+            }
+            .navbar-nav .nav-item {
+                margin: 0.5rem 0; /* Add vertical margin to stacked nav items */
+            }
+            .navbar-nav .btn {
+                width: 80%; /* Make buttons wider when stacked */
+                margin-left: auto !important;
+                margin-right: auto !important;
+            }
+        }
+
+        @media (max-width: 576px) {
+            .content-section {
+                padding: 4.5rem 0 2rem;
+            }
+            .section-title {
+                font-size: 2rem;
+            }
+            .card {
+                margin: 0 1rem; /* Add horizontal margin to card */
+            }
+            .map-container, .map-container iframe {
+                min-height: 200px;
+                height: 200px;
+            }
+            .footer {
+                padding: 1.5rem 0;
             }
         }
     </style>
 </head>
 <body>
-    <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
         <div class="container">
-            <a class="navbar-brand d-flex align-items-center" href="index.html">
+            <a class="navbar-brand" href="index.html">
                 <img src="images/Vector.png" alt="PetUniverse Logo" class="logo-img">
                 <span class="brand-text">PetUniverse<br>Connect</span>
             </a>
@@ -108,49 +252,43 @@
                         <a class="nav-link" href="about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="sevices.html">Services</a>
-                    </li>
+                        <a class="nav-link" href="sevices.html">Services</a> </li>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="contact.html">Contact</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link btn btn-outline-primary ms-lg-3" href="login.html">Login</a>
+                    <li class="nav-item mt-2 mt-lg-0"> <a class="nav-link btn btn-outline-primary" href="login.html">Login</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link btn btn-primary text-white ms-lg-2" href="signup.html">Sign Up</a>
+                    <li class="nav-item mt-2 mt-lg-0 ms-lg-2"> <a class="nav-link btn btn-primary text-white" href="signup.html">Sign Up</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <!-- Main Content Section -->
     <section class="content-section text-center">
         <div class="container">
-            <h1 class="section-title display-1 mt-3">Contact Us</h1>
+            <h1 class="section-title display-4">Contact Us</h1>
             
             <div class="row justify-content-center mb-5">
-                <div class="col-md-8">
-                    <div class="card p-4">
+                <div class="col-lg-8 col-md-10">
+                    <div class="card p-4 p-md-5">
                         <p class="lead mb-4">
                             Have questions, suggestions, or need support? Reach out to us! 
                             Our team is here to help you with anything related to PetUniverse Connect.
                         </p>
                         <div class="row">
-                            <div class="col-md-6">
-                                <h3 class="h5 mb-3 text-start">Get in Touch</h3>
+                            <div class="col-md-6 mb-4 mb-md-0"> <h3 class="h5 mb-4 text-start">Get in Touch</h3>
                                 <div class="contact-info-item">
                                     <i class="fas fa-envelope"></i> <a href="mailto:support@petuniverseconnect.com">support@petuniverseconnect.com</a>
                                 </div>
                                 <div class="contact-info-item">
-                                    <i class="fas fa-phone"></i> (123) 456-7890
-                                </div>
+                                    <i class="fas fa-phone"></i> <a href="tel:+1234567890">(123) 456-7890</a> </div>
                                 <div class="contact-info-item">
                                     <i class="fas fa-map-marker-alt"></i> 123 Pet Lane, Animal City, PA 12345
                                 </div>
                             </div>
-                            <div class="col-md-6 mt-4 mt-md-0">
-                                <h3 class="h5 mb-3 text-start">Send Us a Message</h3>
+                            <div class="col-md-6">
+                                <h3 class="h5 mb-4 text-start">Send Us a Message</h3>
                                 <form>
                                     <div class="mb-3">
                                         <input type="text" class="form-control" placeholder="Your Name" required>
@@ -171,20 +309,22 @@
 
             <h2 class="section-title h3 mb-4">Our Location</h2>
             <div class="row justify-content-center">
-                <div class="col-md-8">
-                    <div class="map-placeholder">
-                        <p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d126093.78244294513!2d7.367465157320973!3d9.024416368195467!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x104e745f4cd62fd9%3A0x53bd17b4a20ea12b!2sAbuja%2C%20Federal%20Capital%20Territory%2C%20Nigeria!5e0!3m2!1sen!2ske!4v1750440146484!5m2!1sen!2ske" width="725" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></p>
-                    </div>
+                <div class="col-lg-8 col-md-10">
+                    <div class="map-container">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1dYOUR_LATITUDE!2dYOUR_LONGITUDE!3dYOUR_ZOOM_LEVEL!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zYOUR_LOCATION_NAME!5e0!3m2!1sen!2sus!4vYOUR_TIMESTAMP" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- Footer -->
-    <footer class="mt-auto">
+    <footer class="footer">
         <div class="container">
-            <p>&copy; 2025 PetUniverse Connect. All rights reserved.</p>
-            <p><a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a></p>
+            <p>© 2025 PetUniverse Connect. All rights reserved.</p>
+            <p>
+                <a href="#">Privacy Policy</a> | 
+                <a href="#">Terms of Service</a>
+            </p>
         </div>
     </footer>
 
