--- a/health-record.html
+++ b/health-record.html
@@ -15,6 +15,8 @@
         .layout-wrapper {
             display: flex;
             min-height: 100vh;
+            /* Allow content to wrap on small screens */
+            flex-wrap: wrap;
         }
         .sidebar {
             width: 270px;
@@ -24,11 +26,21 @@
             overflow-y: auto;
             padding-top: 20px;
             border-right: 1px solid #dee2e6;
+            /* Ensure sidebar is sticky on desktop, full height */
+            position: sticky;
+            top: 0;
+            height: 100vh;
+        }
+        .main-wrapper {
+            flex-grow: 1;
+            /* Adjusted width for desktop layout */
+            width: calc(100% - 270px);
+            padding: 0; /* Already 0, but good to be explicit */
         }
         .main-content {
-            flex-grow: 1;
-            margin: 0;
-            padding: 0;
+            height: 100%;
+            background-color: #ffffff;
+            padding: 2rem; /* Consistent padding */
         }
         .nav-link {
             color: #333;
@@ -51,25 +63,100 @@
             background-color: #0868f7;
             color: #fff !important;
         }
-        .main-wrapper {
-            flex-grow: 1;
-            padding: 0;
+        .card {
+            border: 1px solid #dee2e6;
+            border-radius: 15px;
+            margin-bottom: 1.5rem; /* Spacing between cards */
         }
-        .topbar {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 0.5rem;
+        .card-body {
+            padding: 1.5rem;
         }
-        @media (max-width: 768px) {
+
+        /* --- Responsive Adjustments --- */
+        @media (max-width: 991.98px) { /* Adjusts for screens smaller than 'lg' breakpoint (992px) */
             .layout-wrapper {
-                flex-direction: column;
+                flex-direction: column; /* Stacks sidebar and main content vertically */
             }
             .sidebar {
-                width: 100%;
-                position: relative;
+                width: 100%; /* Sidebar takes full width */
+                height: auto; /* Height adjusts to content */
+                position: relative; /* No longer sticky on top */
                 border-right: none;
                 border-bottom: 1px solid #dee2e6;
+                padding: 1rem; /* Reduced padding for mobile */
+            }
+            .main-wrapper {
+                width: 100%; /* Main content takes full width */
+            }
+            /* Hide the sidebar nav by default on mobile, show only when toggled */
+            .sidebar-nav-collapse {
+                display: none;
+            }
+            .sidebar-nav-collapse.show {
+                display: block;
+            }
+            .nav-link {
+                margin-bottom: 0.5rem; /* Closer spacing for stacked nav links */
+            }
+            .sidebar .d-flex.align-items-start.mb-10 {
+                margin-bottom: 1rem !important; /* Adjust logo margin */
+            }
+            .main-content {
+                padding: 1rem; /* Adjust main content padding */
+            }
+        }
+
+        @media (max-width: 767.98px) { /* Adjusts for screens smaller than 'md' breakpoint (768px) */
+            .topbar {
+                flex-direction: column; /* Stack header items vertically */
+                align-items: flex-start !important; /* Align items to the left */
+                gap: 1rem; /* Space between stacked elements */
+            }
+            .topbar > div:last-child { /* Targets the icons and add pet button */
+                width: 100%; /* Make this group take full width */
+                justify-content: space-between; /* Distribute items horizontally */
+                margin-top: 0.5rem; /* Add some space above */
+            }
+
+            /* Dropdown adjustments for mobile */
+            #notif-dropdown, #profile-dropdown {
+                top: auto !important; /* Override fixed top */
+                bottom: -10px; /* Position relative to its parent 'position-relative' div */
+                right: 0 !important; /* Align to the right of its parent */
+                left: auto !important; /* Override any left alignment */
+                width: 200px !important; /* Adjust width, use max-width for safety */
+                max-width: 90vw; /* Ensure it doesn't overflow small screens */
+            }
+            #profile-dropdown {
+                width: 120px !important; /* Adjust specific width for profile */
+            }
+
+            /* Basic Information section */
+            .card-body .d-flex.align-items-start.gap-4.flex-wrap {
+                flex-direction: column; /* Stack image and text vertically */
+                align-items: center !important; /* Center the stacked content */
+                text-align: center;
+            }
+            .card-body .d-flex.align-items-start.gap-4.flex-wrap img {
+                margin-bottom: 1rem; /* Space below image */
+            }
+            .card-body .d-flex.align-items-start.gap-4.flex-wrap .row {
+                width: 100%; /* Ensure info columns take full width */
+            }
+            .card-body .d-flex.align-items-start.gap-4.flex-wrap .col-md-6 {
+                margin-bottom: 0.5rem; /* Space between stacked columns */
+            }
+            .card-body p {
+                margin-bottom: 0.5rem; /* Reduce paragraph margin */
+            }
+            .card-body p:last-child {
+                margin-bottom: 0; /* No margin on last paragraph */
+            }
+
+            /* Tables to be scrollable */
+            .table-responsive {
+                overflow-x: auto; /* Enable horizontal scrolling for tables */
+                -webkit-overflow-scrolling: touch; /* Smooth scrolling on iOS */
             }
         }
     </style>
@@ -77,37 +164,44 @@
 <body>
     <div class="layout-wrapper">
         <div class="sidebar">
-            <div class="d-flex align-items-start mb-10">
-                <img src="images/Vector.png" alt="pet logo" width="30" height="30" class="me-2 mt-1">
-                <div class="d-flex flex-column" style="font-size: 1.5rem;">
-                    <span class="fw-bold" style="line-height: 1;">PetUniverse</span>
-                    <div class="fw-bold ms-2">Connect</div>
+            <div class="d-flex align-items-center justify-content-between mb-4">
+                <div class="d-flex align-items-start">
+                    <img src="images/Vector.png" alt="pet logo" width="30" height="30" class="me-2 mt-1">
+                    <div class="d-flex flex-column" style="font-size: 1.5rem;">
+                        <span class="fw-bold" style="line-height: 1;">PetUniverse</span>
+                        <div class="fw-bold ms-2">Connect</div>
+                    </div>
                 </div>
+                <button class="btn d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarNav" aria-controls="sidebarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <i class="bi bi-list fs-3"></i>
+                </button>
             </div>
-            <a href="dashboard.html" class="nav-link">
-                <i class="bi bi-house-door"></i> Dashboard
-            </a>
-            <a href="pet-profile.html" class="nav-link">
-                <i class="bi bi-house-heart"></i> Pet Profile
-            </a>
-            <a href="health-record.html" class="nav-link active">
-                <i class="bi bi-heart"></i> Health Records
-            </a>
-            <a href="resources.html" class="nav-link">
-                <i class="bi bi-journal-text"></i> Resources
-            </a>
-            <a href="service-directory.html" class="nav-link">
-                <i class="bi bi-geo-alt"></i> Service Directory
-            </a>
-            <a href="community.html" class="nav-link">
-                <i class="bi bi-people"></i> Community
-            </a>
+
+            <nav class="collapse d-lg-block sidebar-nav-collapse" id="sidebarNav">
+                <a href="dashboard.html" class="nav-link">
+                    <i class="bi bi-house-door"></i> Dashboard
+                </a>
+                <a href="pet-profile.html" class="nav-link">
+                    <i class="bi bi-house-heart"></i> Pet Profile
+                </a>
+                <a href="health-record.html" class="nav-link active">
+                    <i class="bi bi-heart"></i> Health Records
+                </a>
+                <a href="resources.html" class="nav-link">
+                    <i class="bi bi-journal-text"></i> Resources
+                </a>
+                <a href="service-directory.html" class="nav-link">
+                    <i class="bi bi-geo-alt"></i> Service Directory
+                </a>
+                <a href="community.html" class="nav-link">
+                    <i class="bi bi-people"></i> Community
+                </a>
+            </nav>
         </div>
         <div class="main-wrapper">
             <div class="main-content">
-                <!-- Header (Topbar) -->
-                <div class="topbar d-flex justify-content-between align-items-center mb-4 position-relative">
-                    <div class="d-flex align-items-center gap-3">
+                <div class="topbar d-flex flex-column flex-md-row justify-content-between align-items-md-center mb-4 position-relative">
+                    <div class="d-flex align-items-center gap-3 mb-3 mb-md-0">
                         <img src="images/Ellipse 2.png" alt="User" style="width: 40px; height: 30px;" />
                         <span class="fw-semibold" id="greeting-text"></span>
                     </div>
@@ -117,7 +211,7 @@
                             <div
                                 id="notif-dropdown"
                                 class="position-absolute bg-white shadow rounded p-2"
-                                style="top: 100%; right: 0; display: none; z-index: 999;"
+                                style="top: 100%; right: 0; display: none; z-index: 999; width: 250px;"
                             >
                                 <small class="text-muted">No new notifications</small>
                             </div>
@@ -127,7 +221,7 @@
                             <div
                                 id="profile-dropdown"
                                 class="position-absolute bg-white shadow rounded p-2"
-                                style="top: 100%; right: 0; display: none; z-index: 999;"
+                                style="top: 100%; right: 0; display: none; z-index: 999; width: 150px;"
                             >
                                 <a href="settings.html" id="settingsLink" class="d-flex align-items-center text-dark text-decoration-none mb-2">
                                     <i class="bi bi-gear me-2"></i> Settings
@@ -140,20 +234,19 @@
                         <button class="btn btn-primary btn-sm" data-bs-toggle="modal" data-bs-target="#addPetModal">+ Add a Pet</button>
                     </div>
                 </div>
-                <!-- Pet Basic Information -->
-                <div class="card mb-0">
+
+                <h2>Health Record</h2>
+                <div class="card mb-4">
                     <div class="card-body">
                         <h5 class="card-title">Basic Information</h5>
                         <div class="d-flex align-items-start gap-4 flex-wrap">
-                            <img src="images/46046486.jpg" alt="Pet" width="100">
-                            <div class="row w-100">
-                                <div class="col-md-6">
-                                    <p><strong>Name:</strong> Benny</p>
+                            <img src="images/46046486.jpg" alt="Pet" width="100" class="rounded-circle">
+                            <div class="row flex-grow-1"> <div class="col-12 col-md-6"> <p><strong>Name:</strong> Benny</p>
                                     <p><strong>Species:</strong> Dog</p>
                                     <p><strong>Breed:</strong> Labrador</p>
                                     <p><strong>Gender:</strong> Male</p>
                                 </div>
-                                <div class="col-md-6">
+                                <div class="col-12 col-md-6">
                                     <p><strong>Date of Birth / Age:</strong> 07/04/2020</p>
                                     <p><strong>Owner’s Name:</strong> Grace Danielle</p>
                                     <p><strong>Contact:</strong> +234062913619</p>
@@ -163,26 +256,24 @@
                         </div>
                     </div>
                 </div>
-                <!-- Veterinary Contact Information -->
-                <div class="card mb-0">
+                <div class="card mb-4">
                     <div class="card-body">
                         <h5 class="card-title">Veterinary Contact Information</h5>
                         <div class="row">
-                            <div class="col-md-6">
+                            <div class="col-12 col-md-6">
                                 <p><strong>Clinic Name:</strong> Pet Universe</p>
                                 <p><strong>Veterinarian’s Name:</strong> Louise Hillary</p>
                                 <p><strong>Clinic Address:</strong> No.13 Off Chelsea Street, Highcost Abuja</p>
                                 <p><strong>Phone:</strong> +234 8154923739</p>
                             </div>
-                            <div class="col-md-6">
+                            <div class="col-12 col-md-6">
                                 <p><strong>Email:</strong> PetUniverse@gmail.com</p>
                                 <p><strong>After-Hours/Emergency:</strong> +2348164913719</p>
                             </div>
                         </div>
                     </div>
                 </div>
-                <!-- Vaccination History -->
-                <div class="card mb-0">
+                <div class="card mb-4">
                     <div class="card-body">
                         <h5 class="card-title">Vaccination History</h5>
                         <div class="table-responsive">
@@ -225,8 +316,7 @@
                         </div>
                     </div>
                 </div>
-                <!-- Medical History -->
-                <div class="card mb-0">
+                <div class="card mb-4">
                     <div class="card-body">
                         <h5 class="card-title">Medical History</h5>
                         <div class="table-responsive">
@@ -250,7 +340,6 @@
             </div>
         </div>
     </div>
-    <!-- Add Pet Modal (Correct Bootstrap structure from your previous version) -->
     <div class="modal fade" id="addPetModal" tabindex="-1" aria-labelledby="addPetModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -276,8 +365,8 @@
                             <button type="button" class="btn btn-secondary me-2" id="cancelAddPet" data-bs-dismiss="modal">Cancel</button>
                             <button type="submit" class="btn btn-primary">Add Pet</button>
                         </div>
-                    </form>
-                </div>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
