--- a/resetpass.html
+++ b/resetpass.html
@@ -62,6 +62,24 @@
             background-color: #f8d7da;
             color: #721c24;
         }
+        .back-to-login {
+            margin-top: 1.5rem;
+            display: block; /* Ensures it takes its own line */
+            color: #0868f7;
+            text-decoration: none;
+            font-weight: 500;
+        }
+        .back-to-login:hover {
+            text-decoration: underline;
+        }
+
+        /* Responsive adjustments */
+        @media (max-width: 576px) {
+            .reset-password-container {
+                margin: 1rem;
+                padding: 2rem;
+            }
+        }
     </style>
 </head>
 <body>
@@ -81,6 +99,7 @@
             <button type="submit" class="btn btn-primary">Reset Password</button>
             <div id="resetPasswordMessage" class="message-area"></div>
         </form>
+        <a href="login.html" class="back-to-login">Back to Login</a>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/reset-password.js"></script>
