--- a/settings.html
+++ b/settings.html
@@ -17,21 +17,133 @@
         }
         .layout-wrapper {
             display: flex;
-            min-height: 100vh;
+            flex-direction: column; /* Changed to column to allow main-content and footer to stack */
             flex-grow: 1; /* Allow main content to grow */
-            flex-direction: column; /* Change to column to allow footer at bottom */
         }
         .main-wrapper {
             flex-grow: 1; /* Allow main content wrapper to take available space */
             width: 100%; /* Ensure it takes full width */
+            padding: 1.5rem; /* Add some padding around the content */
         }
         .main-content {
             background-color: #ffffff;
             padding: 2rem;
-            flex-grow: 1; /* Ensure content pushes footer down */
+            border-radius: 8px; /* Added for a softer look */
+            box-shadow: 0 0 15px rgba(0,0,0,0.05); /* Subtle shadow */
+            max-width: 1200px; /* Max width for content */
+            margin: 0 auto; /* Center the content */
         }
 
-        /* Footer Styles (Copied from thread.html) */
+        /* Topbar Styles */
+        .topbar {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 2rem; /* Increased margin for better spacing */
+            flex-wrap: wrap; /* Allow wrapping on smaller screens */
+        }
+        .topbar .profile-greeting {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            margin-bottom: 1rem; /* Space when wrapped */
+        }
+        .topbar .profile-greeting img {
+            width: 40px;
+            height: 40px; /* Made square for consistency */
+            border-radius: 50%; /* Circular image */
+            object-fit: cover;
+        }
+        .topbar .icon-group {
+            display: flex;
+            align-items: center;
+            gap: 20px; /* Increased gap between icons */
+            margin-bottom: 1rem; /* Space when wrapped */
+        }
+        .topbar .icon-group i {
+            cursor: pointer;
+            color: #495057; /* Darker icon color */
+            transition: color 0.2s ease-in-out;
+        }
+        .topbar .icon-group i:hover {
+            color: #007bff; /* Hover effect */
+        }
+
+        /* Dropdown Styles */
+        .topbar .dropdown-menu {
+            position: absolute;
+            background-color: #fff;
+            border: 1px solid rgba(0, 0, 0, 0.15);
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+            padding: 1rem;
+            z-index: 1000;
+            min-width: 180px; /* Adjusted min-width */
+        }
+        .topbar .dropdown-menu a {
+            display: flex;
+            align-items: center;
+            padding: 0.5rem 0.75rem;
+            color: #343a40;
+            text-decoration: none;
+            transition: background-color 0.2s ease;
+        }
+        .topbar .dropdown-menu a:hover {
+            background-color: #f8f9fa;
+            border-radius: 5px;
+        }
+        .topbar .dropdown-menu i {
+            margin-right: 0.75rem;
+        }
+
+        /* Notification Specific Dropdown Positioning */
+        #notif-dropdown {
+            top: 40px;
+            right: 100px; /* Adjusted for better spacing from profile icon */
+            width: 280px; /* Wider for notifications */
+        }
+        /* Profile Specific Dropdown Positioning */
+        #profile-dropdown {
+            top: 40px;
+            right: 0; /* Aligned to the right of the profile icon */
+            width: 180px; /* Consistent width for profile */
+        }
+
+        /* Form Card Styles */
+        .card {
+            border: none; /* Remove default bootstrap card border */
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+        }
+        .card .btn-primary {
+            background-color: #007bff;
+            border-color: #007bff;
+            padding: 0.6rem 1.2rem;
+            font-size: 0.95rem;
+            border-radius: 5px;
+            transition: background-color 0.2s ease, border-color 0.2s ease;
+        }
+        .card .btn-primary:hover {
+            background-color: #0056b3;
+            border-color: #0056b3;
+        }
+        .form-check-input:checked {
+            background-color: #007bff;
+            border-color: #007bff;
+        }
+        .form-check-input:focus {
+            box-shadow: 0 0 0 0.25rem rgba(0, 123, 255, 0.25);
+        }
+        .btn-outline-secondary {
+            color: #6c757d;
+            border-color: #6c757d;
+        }
+        .btn-outline-secondary:hover {
+            background-color: #6c757d;
+            color: #fff;
+        }
+
+        /* Footer Styles */
         .footer {
             background-color: #343a40; /* Dark background for footer */
             color: #fff;
@@ -53,81 +165,118 @@
             margin: 0 10px;
         }
 
-        /* Responsive adjustments for pages without sidebar */
+        /* Responsive adjustments */
         @media (max-width: 992px) {
             .main-content {
-                padding: 1rem;
+                padding: 1.5rem; /* Slightly less padding on smaller screens */
             }
-            .topbar { /* Ensure topbar adjusts correctly */
+            .topbar {
                 flex-direction: column;
-                align-items: flex-start !important;
+                align-items: flex-start; /* Align items to start when stacked */
             }
-            .topbar .d-flex.align-items-center.gap-3:last-child {
-                margin-top: 1rem;
-                width: 100%;
-                justify-content: space-between;
+            .topbar .profile-greeting {
+                margin-bottom: 1rem;
             }
-            /* Adjust dropdown positions for smaller screens */
+            .topbar .icon-group {
+                width: 100%; /* Take full width when stacked */
+                justify-content: flex-end; /* Align icons to the right */
+                margin-bottom: 0.5rem; /* Reduce margin */
+            }
+
+            /* Adjust dropdown positions for smaller screens to prevent overflow */
             #notif-dropdown {
                 right: 0 !important; /* Align to right edge */
-                left: auto !important;
-                width: 95% !important; /* Adjust width */
-                max-width: 250px;
+                left: auto !important; /* Reset left */
+                width: 250px; /* Fixed width */
             }
             #profile-dropdown {
                 right: 0 !important; /* Align to right edge */
-                left: auto !important;
+                left: auto !important; /* Reset left */
+                width: 150px; /* Fixed width */
+            }
+
+            .row.g-4 > [class*="col-"] {
+                flex-basis: 100%; /* Make columns stack vertically */
+                max-width: 100%; /* Ensure they take full width */
+            }
+            .card {
+                margin-bottom: 1.5rem; /* Add space between stacked cards */
+            }
+            .card:last-child {
+                margin-bottom: 0; /* No margin for the last card */
+            }
+        }
+
+        @media (max-width: 576px) {
+            .main-wrapper {
+                padding: 1rem; /* Less padding on very small screens */
+            }
+            .main-content {
+                padding: 1rem;
+            }
+            .topbar .profile-greeting {
+                flex-direction: column; /* Stack profile image and greeting */
+                align-items: flex-start;
+                margin-bottom: 1rem;
+            }
+            .topbar .profile-greeting img {
+                margin-bottom: 0.5rem; /* Space below image */
+            }
+            .topbar .icon-group {
+                justify-content: space-around; /* Distribute icons evenly */
+                gap: 0; /* Remove gap when distributing */
+            }
+            .footer .row > div {
+                margin-bottom: 1rem;
+            }
+            .footer .row > div:last-child {
+                margin-bottom: 0;
             }
         }
     </style>
 </head>
 <body>
     <div class="layout-wrapper">
-        <!-- Main Content -->
         <div class="main-wrapper">
             <div class="main-content">
-                <!-- Header (Topbar) -->
-                <div class="topbar d-flex justify-content-between align-items-center mb-4">
-                    <div class="d-flex align-items-center gap-3">
-                        <img src="images/Ellipse 2.png" alt="User Profile" style="width: 40px; height: 30px;" />
-                        <span class="fw-semibold"><span id="greeting-text"></span></span>
+                <div class="topbar">
+                    <div class="profile-greeting">
+                        <img src="images/Ellipse 2.png" alt="User Profile" />
+                        <span class="fw-semibold"><span id="greeting-text">Good Morning, Ada</span></span>
                     </div>
-                    <div class="d-flex align-items-center gap-3 position-relative">
-                        <i id="notif-icon" class="bi bi-bell fs-4" style="cursor: pointer;"></i>
-                        <i id="profile-icon" class="bi bi-person-circle fs-4" style="cursor: pointer;"></i>
+                    <div class="icon-group position-relative">
+                        <i id="notif-icon" class="bi bi-bell fs-4"></i>
+                        <i id="profile-icon" class="bi bi-person-circle fs-4"></i>
 
-                        <!-- Notification Dropdown (consistent with other pages) -->
-                        <div id="notif-dropdown" class="position-absolute bg-white border shadow-sm p-3"
-                            style="top: 40px; right: 100px; width: 250px; display: none; z-index: 10; border-radius: 10px;" >
+                        <div id="notif-dropdown" class="dropdown-menu" style="display: none;">
                             <p class="fw-bold mb-2">Notifications</p>
                             <p class="text-muted mb-1">• Appointment on June 6</p>
                             <p class="text-muted mb-1">• Benny’s vaccination added</p>
-                            <p class="text-muted">• New care tips available</p>
+                            <p class="text-muted mb-0">• New care tips available</p>
                             <a href="notifications.html" class="text-primary mt-2 d-block text-end">View All</a>
                         </div>
 
-                        <!-- Profile Dropdown (consistent with other pages) -->
-                        <div id="profile-dropdown" class="position-absolute bg-white border shadow-sm p-3"
-                            style="top: 40px; right: 50px; width: 150px; display: none; z-index: 10; border-radius: 10px;" >
-                            <p class="mb-2"><i class="bi bi-gear me-2"></i><a id="settingsLink" href="settings.html" class="text-decoration-none text-dark">Settings</a></p>
-                            <p class="mb-0"><i class="bi bi-box-arrow-right me-2"></i><a id="logoutLink" href="logout.html" class="text-decoration-none text-dark">Logout</a></p>
+                        <div id="profile-dropdown" class="dropdown-menu" style="display: none;">
+                            <a id="settingsLink" href="settings.html" class="text-decoration-none">
+                                <i class="bi bi-gear"></i>Settings
+                            </a>
+                            <a id="logoutLink" href="logout.html" class="text-decoration-none">
+                                <i class="bi bi-box-arrow-right"></i>Logout
+                            </a>
                         </div>
                     </div>
                 </div>
 
-                <!-- Back to Dashboard Link -->
-                <div class="mb-3">
+                <div class="mb-4">
                     <a href="dashboard.html" class="btn btn-outline-secondary btn-sm">
                         <i class="bi bi-arrow-left me-2"></i>Back to Dashboard
                     </a>
                 </div>
 
-                <!-- Settings Content -->
                 <h1 class="mb-4">Account Settings</h1>
 
                 <div class="row g-4">
-                    <div class="col-md-6">
-                        <div class="card p-4 h-100">
+                    <div class="col-lg-6 col-md-12"> <div class="card p-4 h-100">
                             <h5 class="card-title fw-semibold mb-3">Profile Information</h5>
                             <form>
                                 <div class="mb-3">
@@ -146,8 +295,7 @@
                             </form>
                         </div>
                     </div>
-                    <div class="col-md-6">
-                        <div class="card p-4 h-100">
+                    <div class="col-lg-6 col-md-12"> <div class="card p-4 h-100">
                             <h5 class="card-title fw-semibold mb-3">Password Management</h5>
                             <form>
                                 <div class="mb-3">
@@ -195,7 +343,6 @@
         </div>
     </div>
 
-    <!-- Footer (consistent with thread.html) -->
     <footer class="footer">
         <div class="container">
             <div class="row">
@@ -214,6 +361,6 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/settings.js"></script> <!-- Linking to the page-specific JS -->
+    <script src="js/settings.js"></script>
 </body>
 </html>
