--- a/signup.html
+++ b/signup.html
@@ -5,7 +5,7 @@
     <title>Sign Up </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet"> <style>
         body, html {
             height: 100%;
             margin: 0;
@@ -19,7 +19,7 @@
             display: flex;
             min-height: 100vh; /* Use min-height to ensure it takes full height but can expand */
             flex-direction: row; /* Default to row for desktop */
-            border-radius: 12px; 
+            border-radius: 12px;
             overflow: hidden; /* To ensure inner rounded corners are visible on desktop */
         }
 
@@ -46,12 +46,14 @@
         }
 
         /* Logo and brand text container (Desktop Default) */
-        .logo-brand-container { 
+        .logo-brand-container {
             position: absolute; /* Keep it absolute for desktop overlay */
             top: 2rem; /* Adjusted from m-4 for more control */
             left: 2rem; /* Adjusted from m-4 */
             z-index: 10; /* Ensure logo is above the image */
-            width: max-content; /* Ensure the container only takes width it needs */
+            display: flex; /* Make it a flex container to align content */
+            align-items: center; /* Vertically align items */
+            gap: 1rem; /* Space between logo circle and text */
         }
         .logo { /* Your specific logo circle style */
             width: 60px;
@@ -65,10 +67,10 @@
             box-shadow: 0 2px 5px rgba(0,0,0,0.2); /* Added subtle shadow */
         }
         .logo img { /* Ensure logo image within circle is sized correctly */
-            width: 30px; 
-            height: 30px; 
-            margin-right: 0.5rem; /* Space between image and text */
-            margin-top: 0.25rem; /* Small vertical adjust */
+            width: 30px;
+            height: 30px;
+            margin-right: 0; /* No margin-right inside the circle */
+            margin-top: 0; /* No margin-top inside the circle */
         }
         .brand-text { /* Your specific brand text style */
             font-weight: bold;
@@ -76,6 +78,7 @@
             color: #000; /* Force black as requested */
             white-space: nowrap; /* Prevent "PetUniverse Connect" from wrapping */
             text-shadow: none; /* Removed text-shadow */
+            line-height: 1.2; /* Adjust line height for multiline text */
         }
 
 
@@ -146,16 +149,24 @@
             color: #fff;
         }
         /* Specific styling for the password toggle buttons, to align with input */
-        .mb-3.position-relative .btn {
-            top: 50%; /* Align with the middle of the input */
-            transform: translateY(-50%); /* Adjust for better visual alignment */
-            padding: 0.3rem 0.6rem; /* Adjusted padding to make button smaller */
-            font-size: 0.7rem; /* Slightly smaller font size for the button text */
-            line-height: 1.2; /* Ensure text fits well vertically */
-            height: auto; /* Let content determine height, but padding controls size */
+        .input-group-text { /* For a Bootstrap input-group-text with icon */
+            background-color: #e9ecef;
+            border: 1px solid #ced4da;
+            border-left: none;
+            border-radius: 0 .5rem .5rem 0;
         }
-        .mb-3.position-relative .form-control.pe-5 { /* Ensure enough padding for button */
-            padding-right: 4.5rem !important;
+
+        /* Adjust input and button within the input group for better visual */
+        .input-group .form-control {
+            border-right: none;
+            border-top-right-radius: 0;
+            border-bottom-right-radius: 0;
+        }
+        .input-group .btn { /* Password toggle button */
+            padding: 0.75rem 1rem; /* Match input padding for height */
+            border-top-left-radius: 0 !important;
+            border-bottom-left-radius: 0 !important;
+            height: auto;
         }
 
         /* Password match message and signup message styles */
@@ -165,29 +176,26 @@
         #passwordMatchMsg.text-success, #signupMessage.text-success {
             color: #28a745 !important; /* Bootstrap green */
         }
+        #signupMessage { /* General message styling */
+            padding: 0.75rem 1.25rem;
+            border-radius: 0.5rem;
+            margin-bottom: 0.75rem; /* Consistent margin for messages */
+            display: none; /* Hidden by default */
+        }
         #signupMessage.alert-info {
             background-color: #e0f7fa; /* Light blue for info */
             border-color: #b2ebf2;
             color: #00796b;
-            padding: 0.75rem 1.25rem;
-            border-radius: 0.5rem;
-            margin-bottom: 0.75rem; /* Consistent margin for messages */
         }
         #signupMessage.alert-danger {
             background-color: #ffebee; /* Light red for error */
             border-color: #ffcdd2;
             color: #c62828;
-            padding: 0.75rem 1.25rem;
-            border-radius: 0.5rem;
-            margin-bottom: 0.75rem;
         }
         #signupMessage.alert-success {
             background-color: #e8f5e9; /* Light green for success */
             border-color: #c8e6c9;
             color: #2e7d32;
-            padding: 0.75rem 1.25rem;
-            border-radius: 0.5rem;
-            margin-bottom: 0.75rem;
         }
 
 
@@ -202,7 +210,6 @@
                 overflow: visible; /* Allow content to overflow and be scrollable by body */
             }
             .info-section {
-                /* REVEAL THE INFO SECTION AND MAKE IT A BANNER */
                 display: flex !important; /* Ensure it's visible */
                 height: 250px; /* Fixed height for the banner on mobile */
                 width: 100%; /* Takes full width */
@@ -230,8 +237,8 @@
                 width: max-content; /* Ensure the container only takes width it needs */
             }
             /* Brand text color already set to black, now ensure proper contrast.
-               NOTE: Black text on a dark image background may have poor contrast.
-                     Consider making the image lighter or changing text color for mobile banner. */
+                NOTE: Black text on a dark image background may have poor contrast.
+                      Consider making the image lighter or changing text color for mobile banner. */
             .brand-text {
                 color: #000 !important; /* Force black text as requested */
                 text-shadow: none !important; /* Remove text shadow */
@@ -294,17 +301,14 @@
         <div class="info-section">
             <img src="images/image 15.jpg" alt="img" class="hero-img"/>
 
-            <!-- Logo and Brand Text Container -->
-            <div class="logo-brand-container"> 
-                <div class="d-flex align-items-center">
-                    <div class="d-flex align-items-center justify-content-center me-3 logo">
-                        <img src="images/Vector.png" alt="pet logo" width="30" height="30" class="me-2 mt-1" />
-                    </div>
-                    <div class="fw-bold fs-5 brand-text">PetUniverse<br />Connect</div>
+            <div class="logo-brand-container">
+                <div class="logo">
+                    <img src="images/Vector.png" alt="pet logo" />
                 </div>
+                <div class="fw-bold fs-5 brand-text">PetUniverse<br />Connect</div>
             </div>
         </div>
-        
+
         <div class="form-section">
             <div class="signup-container">
                 <form id="signupForm">
@@ -324,29 +328,31 @@
                         <label for="username" class="form-label">Username</label>
                         <input type="text" class="form-control" id="username" placeholder="Choose a username" required>
                     </div>
-                  <div class="mb-3">
-                       <label for="field" class="form-label">Role</label>
-                      <input type="text" class="form-control" id="field" value="PET_OWNER" disabled>
-                   </div>
+                    <div class="mb-3">
+                        <label for="field" class="form-label">Role</label>
+                        <input type="text" class="form-control" id="field" value="PET_OWNER" disabled>
+                    </div>
                     <div class="mb-3">
                         <label for="email" class="form-label">Email address</label>
                         <input type="email" class="form-control" id="email" placeholder="Enter your email" required>
                     </div>
 
-                    <div class="mb-3 position-relative">
-                        <label for="password" class="form-label">Password</label>
-                        <input type="password" class="form-control pe-5" id="password" placeholder="Create a password" required>
-                        <button type="button" id="togglePassword" class="btn btn-sm btn-outline-secondary position-absolute end-0 translate-middle-y me-2" style="padding: 2px 8px; font-size: 0.75rem;">Show</button>
+                    <div class="mb-3 input-group"> <label for="password" class="form-label w-100">Password</label>
+                        <input type="password" class="form-control" id="password" placeholder="Create a password" required>
+                        <button type="button" id="togglePassword" class="btn btn-outline-secondary">
+                            <i class="fas fa-eye"></i>
+                        </button>
                     </div>
 
-                    <div class="mb-3 position-relative">
-                        <label for="confirmPassword" class="form-label">Confirm Password</label>
-                        <input type="password" class="form-control pe-5" id="confirmPassword" placeholder="Re-enter password" required>
-                        <button type="button" id="toggleConfirm" class="btn btn-sm btn-outline-secondary position-absolute end-0 translate-middle-y me-2" style="padding: 2px 8px; font-size: 0.75rem;">Show</button>
+                    <div class="mb-3 input-group"> <label for="confirmPassword" class="form-label w-100">Confirm Password</label>
+                        <input type="password" class="form-control" id="confirmPassword" placeholder="Re-enter password" required>
+                        <button type="button" id="toggleConfirm" class="btn btn-outline-secondary">
+                            <i class="fas fa-eye"></i>
+                        </button>
                     </div>
 
-                    <div id="passwordMatchMsg" class="form-text mb-3 text-danger"></div>
-                    <div id="signupMessage" class="mt-3 text-center"></div>
+                    <div id="passwordMatchMsg" class="form-text mb-3 text-danger" style="display: none;"></div>
+                    <div id="signupMessage" class="mt-3 text-center" style="display: none;"></div>
 
                     <button type="submit" class="btn btn-primary w-100">Sign Up</button>
 
